--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="product__btn">
-            <img class="product__btn-icon" src="/images/icon-cart.svg" alt="cart-img">
+            <img class="product__btn-icon" src="images/icon-cart.svg" alt="cart-img">
             <a href="#" class="product__btn-text">Add to Cart</a>
           </div>
 
