--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     </section>
   </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
       href="#">Pouya Nasr</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
